<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchResultsActivity">

    <TextView
        android:id="@+id/search_page_title"
        android:layout_width="340dp"
        android:layout_height="68dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:hint="Search"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_bar_2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="Search"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/search_btn_2"
        app:layout_constraintStart_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toBottomOf="@+id/search_page_title" />

    <Button
        android:id="@+id/search_btn_2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="Search"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_bar_2"
        app:layout_constraintTop_toBottomOf="@+id/search_page_title" />

    <TextView
        android:id="@+id/back_btn"
        android:layout_width="32dp"
        android:layout_height="38dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="9dp"
        android:clickable="true"
        android:drawableStart="@drawable/ic_baseline_arrow_back_24"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/search_bar_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_page_title" />

    <TextView
        android:id="@+id/no_results_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="94dp"
        android:text="No results found"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar_2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_item_recycler"
        android:layout_width="384dp"
        android:layout_height="542dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar_2" />
</androidx.constraintlayout.widget.ConstraintLayout>